[gd_scene load_steps=14 format=3 uid="uid://dvprl1706bxvj"]

[ext_resource type="Script" path="res://Scripts/ui/hud.gd" id="1_20f3f"]
[ext_resource type="PackedScene" uid="uid://bhp0iy4vb6m6" path="res://Scenes/UI/health_bar.tscn" id="1_senfn"]
[ext_resource type="Shader" path="res://Shaders/transition.gdshader" id="2_5yp8a"]
[ext_resource type="AudioStream" uid="uid://dns1p00fkioyn" path="res://Audio/Sfx/gameover.mp3" id="2_qlak8"]
[ext_resource type="Script" path="res://Scripts/ui/heart_bar.gd" id="2_rmxq7"]
[ext_resource type="Texture2D" uid="uid://b7r50gj6a4hm0" path="res://Assets/heart_full.png" id="3_ctj7b"]
[ext_resource type="Texture2D" uid="uid://dj3ds8wu02i36" path="res://Shaders/CloudMask.png" id="3_eb7a1"]
[ext_resource type="Theme" uid="uid://qhr0010dk67q" path="res://Themes/hsdvania.tres" id="4_4mpp3"]
[ext_resource type="LabelSettings" uid="uid://2076kcukacf7" path="res://Themes/label_settings.tres" id="6_0df8f"]
[ext_resource type="AudioStream" uid="uid://y5str6yfvy3m" path="res://Audio/Sfx/continue.mp3" id="6_nqcsj"]
[ext_resource type="FontFile" uid="uid://6k8qt3jkoc8x" path="res://Assets/Fonts/OptimusPrincepsSemiBold.ttf" id="7_n4tbo"]
[ext_resource type="AudioStream" uid="uid://ducq1ssjkoeu7" path="res://Audio/Sfx/Yippee Sound Effect.mp3" id="10_0xqcm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8wlas"]
shader = ExtResource("2_5yp8a")
shader_parameter/player_screen_pos = Vector2(0.5, 0.5)
shader_parameter/progress = 0.0
shader_parameter/pixel_size = 70.0
shader_parameter/mask_pixel_size = 70.0
shader_parameter/tint_color = Color(0.567, 0.361, 0.361, 1)
shader_parameter/blur_amount = 5.0
shader_parameter/MASK_TEXTURE = ExtResource("3_eb7a1")

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20f3f")

[node name="Transition" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8wlas")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4mpp3")
text = "The nightmare continues...

>press SPACE to retry<<"
label_settings = ExtResource("6_0df8f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameoverSfx" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("2_qlak8")
volume_db = 10.0

[node name="HealthBar" parent="." instance=ExtResource("1_senfn")]
layout_mode = 0
offset_left = 23.0
offset_top = 27.0
offset_right = 388.0
offset_bottom = 45.0

[node name="HeartBar" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 80.0
offset_right = 228.0
offset_bottom = 120.0
script = ExtResource("2_rmxq7")

[node name="Heart1" type="TextureRect" parent="HeartBar"]
layout_mode = 2
texture = ExtResource("3_ctj7b")
expand_mode = 2
stretch_mode = 4

[node name="Heart2" type="TextureRect" parent="HeartBar"]
layout_mode = 2
texture = ExtResource("3_ctj7b")
expand_mode = 2
stretch_mode = 4

[node name="Heart3" type="TextureRect" parent="HeartBar"]
layout_mode = 2
texture = ExtResource("3_ctj7b")
expand_mode = 2
stretch_mode = 4

[node name="WinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_0xqcm")
volume_db = 10.0

[node name="ContinueSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nqcsj")
volume_db = 10.0

[node name="BafoegText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -253.0
offset_top = 33.0
offset_right = -24.0
offset_bottom = 93.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("7_n4tbo")
theme_override_font_sizes/font_size = 44
text = "BafÃ¶g: 0/9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextFadeInTimer" type="Timer" parent="."]

[connection signal="timeout" from="TextFadeInTimer" to="." method="_on_text_fade_in_timer_timeout"]
